# yajt

./: AGENTS.md  README.md  pyproject.toml
src/yajt/: __init__.py  __main__.py
src/yajt/attacks/: __init__.py  alg_confusion.py  claim_injection.py  jws_jwe.py  kid_injection.py  quirks.py  typ_cty.py  variants.py
src/yajt/cli/: __init__.py  app.py
src/yajt/cli/commands/: __init__.py  attack.py  crack.py  decode.py  edit.py  fuzz.py  keys.py  logging_utils.py  resign.py  validate.py  verify.py
src/yajt/core/: __init__.py  codec.py  normalize.py  parse.py  sign.py  validate.py  verify.py
src/yajt/integrations/: __init__.py  ffuf_jobs.py  ffuf_parse.py  hashcat_jobs.py  hashcat_parse.py
src/yajt/keys/: __init__.py  generate.py  jwk.py  jwks_cache.py
src/yajt/logging/: README.txt  __init__.py  logbook.py  serializer.py
src/yajt/models/: __init__.py  attack_enums.py  claims.py  evidence.py  jwt_models.py  keys.py  log_enums.py  results.py
src/yajt/services/: __init__.py  clock.py  idgen.py  policy.py  wordlists.py
src/yajt/workflows/: __init__.py  claim_injection.py  error_forcing.py  resign.py  scan_playbooks.py  verify.py
tests/: test_edit.py  test_jwks_validate.py  test_resign_and_sort.py  test_validate.py
