[project]
name = "yajt"
version = "0.1.0"
description = "Yet Another JWT tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"cryptography>=42.0.0",
	"httpx>=0.27.0",
	"jwcrypto>=1.5.0",
	"typer>=0.12.0",
]

[project.scripts]
yajt = "yajt.cli.app:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
	"pyright>=1.1.350",
	"pytest>=8.0.0",
	"ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
